Some code and javadoc cleanup